syntax = "proto3";

package feedback;

import "google/api/annotations.proto";

service CustomerFeedback {
  // Add a customer feedback
  rpc AddPassengerFeedback(AddPassengerFeedbackRequest) returns (AddPassengerFeedbackResponse) {
    option (google.api.http) = {
      post: "/v1/feedback/addPassengerFeedback"
      body: "*"
    };
  }
  // Get feedback by passengerID 
  rpc GetFeedbacksByPassengerID(GetFeedbacksByPassengerIdRequest) returns (GetFeedbacksByPassengerIdResponse) {
    option (google.api.http) = {
      get: "/v1/feedback/getFeedbacksByPassengerID"
    };
  }
  // Get feedback by booking code
  rpc GetFeedbackByBookingCode(GetFeedbackByBookingCodeRequest) returns (GetFeedbackByBookingCodeResponse) {
    option (google.api.http) = {
      get: "/v1/feedback/getFeedbackByBookingCode"
    };
  }
  // Delete feedbacks by passengerID
  rpc DeleteFeedbacksByPassengerID(DeleteFeedbacksByPassengerIdRequest) returns (DeleteFeedbacksByPassengerIdResponse) {
    option (google.api.http) = {
      post: "/v1/feedback/deleteFeedbacksByPassengerID"
      body: "*"
    };
  }
}

message PassengerFeedback {
  string bookingCode = 1;
  int32 passengerID = 2;
  string feedback = 3;
}

message AddPassengerFeedbackRequest {
  PassengerFeedback feedback = 1;
}

message AddPassengerFeedbackResponse {
  string msg = 1;
}

message GetFeedbacksByPassengerIdRequest {
  int32 passengerID = 1;
}

message GetFeedbacksByPassengerIdResponse {
  repeated PassengerFeedback feedbacks = 1;
}

message GetFeedbackByBookingCodeRequest {
  string bookingCode = 1;
}

message GetFeedbackByBookingCodeResponse {
  PassengerFeedback feedback = 1;
}

message DeleteFeedbacksByPassengerIdRequest {
  int32 passengerID = 1;
}

message DeleteFeedbacksByPassengerIdResponse {
  int32 deletedFeedbacks = 1;
}